# dango-music-player

./: .gitattributes  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  vite.config.ts
.helix/: ignore
dango-backend/: Cargo.toml
dango-backend/src/: music_db.rs
dango-core/: Cargo.toml
dango-core/src/: lib.rs  music_player.rs  music_tracker.rs
dango-core/src/music_controller/: config.rs  controller.rs  init.rs  music_controller.rs
dango-core/src/music_player/: music_output.rs  music_player.rs  music_resampler.rs
dango-core/src/music_processor/: music_processor.rs
dango-core/src/music_storage/: library.rs  music_collection.rs  music_db.rs  playlist.rs  utils.rs
dango-core/src/music_storage/db_reader/: common.rs  extern_library.rs
dango-core/src/music_storage/db_reader/musicbee/: reader.rs  utils.rs
dango-core/src/music_tracker/: music_tracker.rs
dango-music-player/: Cargo.toml
dango-music-player/benches/: my_benchmark.rs
dango-music-player/src/: main.rs
dango-tui/: Cargo.toml
dmp-command/: Cargo.toml
dmp-command/src/: lib.rs
dmp-core/: .gitignore  Cargo.toml  README.md
dmp-core/src/: lib.rs
dmp-core/src/config/: mod.rs  other_settings.rs
dmp-core/src/music_controller/: connections.rs  controller.rs  controller_handle.rs  library.rs  library_command.rs  player_command.rs  player_monitor.rs  queue_command.rs
dmp-core/src/music_player/: gstreamer.rs
dmp-core/src/music_storage/: library.rs  music_collection.rs  playlist.rs  queue.rs  utils.rs
dmp-core/src/music_storage/db_reader/: common.rs  mod.rs
dmp-core/src/music_storage/db_reader/itunes/: reader.rs
dmp-core/src/music_storage/db_reader/musicbee/: reader.rs
docs/: overview.md
kushi-queue/src/: lib.rs
src/: App.css  App.tsx  error.rs  lib.rs  main.rs  main.tsx  music_db.rs  music_player.rs  traits.rs  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  wrappers.rs
src/bindings/: AlbumArt.ts  BannedType.ts  Config.ts  ConfigConnections.ts  ConfigLibraries.ts  ConfigLibrary.ts  DoNotTrack.ts  InternalTag.ts  PlaybackInfo.ts  PlayerLocation.ts  Service.ts  Song.ts  SongType.ts  Tag.ts  URI.ts
src/components/: App.css  App.tsx  MainView.tsx  NowPlaying.tsx  PlayBar.tsx  PlaylistHead.tsx  Queue.tsx
src/config/: code.tsx  config.rs  index.html  mod.rs  other_settings.rs
src/create_library_window/: code.tsx  index.html
src/music_controller/: config.rs  connections.rs  controller.rs  init.rs  mod.rs  music_controller.rs  queue.rs
src/music_player/: gstreamer.rs  mod.rs  music_output.rs  music_player.rs  music_resampler.rs  player.rs
src/music_processor/: mod.rs  music_processor.rs
src/music_storage/: library.rs  mod.rs  music_collection.rs  music_db.rs  playlist.rs  utils.rs
src/music_storage/db_reader/: common.rs  extern_library.rs  mod.rs
src/music_storage/db_reader/foobar/: reader.rs  utils.rs
src/music_storage/db_reader/itunes/: reader.rs
src/music_storage/db_reader/xml/: reader.rs
src/music_tracker/: mod.rs  music_tracker.rs
