[package]
name = "dmp-core"
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Backend crate for the Dango Music Player "
homepage = ""
documentation = ""
readme = "README.md"
repository = "https://github.com/Dangoware/dmp-core"
keywords = []
categories = []

[dependencies]
file-format = { version = "0.23.0", features = [
    "reader-asf",
    "reader-ebml",
    "reader-mp4",
    "reader-rm",
    "reader-txt",
    "reader-xml",
    "serde",
] }
lofty = "0.18.2"
serde = { version = "1.0.195", features = ["derive"] }
walkdir = "2.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
rayon = "1.8.0"
log = "0.4"
base64 = "0.21.5"
snap = "1"
rcue = "0.1.3"
gstreamer = "0.21.3"
glib = "0.18.5"
crossbeam-channel = "0.5.8"
crossbeam = "0.8.2"
quick-xml = "0.31.0"
leb128 = "0.2.5"
urlencoding = "2.1.3"
m3u8-rs = "5.0.5"
thiserror = "1.0.56"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
serde_json = "1.0.111"
deunicode = "1.4.2"
opener = { version = "0.7.0", features = ["reveal"] }
tempfile = "3.10.1"
listenbrainz = "0.7.0"
discord-rpc-client = "0.4.0"
nestify = "0.3.3"
kushi = "0.1.3"
moro = "0.4.0"
moro-local = "0.4.0"
futures = "0.3.30"
text_io = "0.1.12"
tokio = { version = "1.40.0", features = ["macros", "rt"] }
async-channel = "2.3.1"
