[workspace]
resolver = "2"
members = [
    "src-tauri",
    "dmp-core",
    "dmp-command",
]

[workspace.package]
authors = ["G2-Games <ke0bhogsg@gmail.com>", "MrDulfin"]

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.production]
inherits = "release"
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
