[package]
name = "dango-core"
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0-only"
description = "A music backend that manages storage, querying, and playback of remote and local songs."
homepage = "https://dangoware.com/dango-music-player"
documentation = "https://docs.rs/dango-core"
readme = "README.md"
repository = "https://github.com/DangoWare/dango-music-player"
keywords = ["audio", "music"]
categories = ["multimedia::audio"]

[dependencies]
file-format = { version = "0.22.0", features = ["reader-asf", "reader-ebml", "reader-mp4", "reader-rm", "reader-txt", "reader-xml", "serde"] }
lofty = "0.17.0"
serde = { version = "1.0.191", features = ["derive"] }
time = "0.3.22"
toml = "0.7.5"
walkdir = "2.4.0"
cpal = "0.15.2"
heapless = "0.7.16"
rb = "0.4.1"
symphonia = { version = "0.5.3", features = ["all-codecs"] }
serde_json = "1.0.104"
async-std = "1.12.0"
async-trait = "0.1.73"
md-5 = "0.10.5"
surf = "2.3.2"
futures = "0.3.28"
rubato = "0.12.0"
arrayvec = "0.7.4"
discord-presence = "0.5.18"
chrono = { version = "0.4.31", features = ["serde"] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
unidecode = "0.3.0"
rayon = "1.8.0"
log = "0.4"
pretty_env_logger = "0.4"
base64 = "0.21.5"
snap = "1.1.0"
rcue = "0.1.3"
