[package]
name = "dango-music-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
dango-core = { path = "../dango-core"}
iced = { version = "0.10.0", features = ["image"] }
once_cell = "1.18.0"
