[package]
name = "dmp-core"
version = "0.0.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "Backend crate for the Dango Music Player "
homepage = ""
documentation = ""
readme = "README.md"
repository = "https://github.com/Dangoware/dmp-core"
keywords = []
categories = []

[dependencies]
file-format = { version = "0.26", features = ["reader"] }
lofty = "0.21"
serde = { version = "1.0.195", features = ["derive"] }
walkdir = "2.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
rayon = "1.8.0"
log = "0.4"
rcue = "0.1.3"
crossbeam-channel = "0.5.8"
crossbeam = "0.8.2"
quick-xml = "0.31.0"
leb128 = "0.2.5"
urlencoding = "2.1.3"
m3u8-rs = "6.0.0"
thiserror = "1.0.56"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
serde_json = "1.0.111"
deunicode = "1.4.2"
nestify = "0.3.3"
moro = "0.4.0"
futures = "0.3.30"
async-channel = "2.3.1"
ciborium = "0.2.2"
itertools = "0.13.0"
prismriver = { git = "https://github.com/Dangoware/prismriver.git", rev = "6f5427a60abe984e2d2505421d12a62eb79cb103", features = [] }
parking_lot = "0.12.3"
discord-presence = { version = "1.4.1", features = ["activity_type"] }
listenbrainz = "0.8.1"
rustfm-scrobble = "1.1.1"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["macros"] }
opener = "0.7.2"
ts-rs = { version = "11.0.1", optional = true, features = ["uuid-impl", "chrono-impl", "serde_json"] }
rand = "0.9.1"

[features]
ts = ["dep:ts-rs"]
